--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "method-override": "^2.3.8",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.4"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
