--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,6 @@
     "method-override": "^2.3.8",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.4"
-  },
-  "scripts": {
-    "start": "node server.js"
   }
+ 
 }
