--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.8",
     "mysql": "^2.13.0",
-    "sequelize": "^3.30.4"
+    "mysql2": "^1.6.5",
+    "sequelize": "^6.0.0"
   }
- 
 }
