--- a/config/config.json
+++ b/config/config.json
@@ -21,6 +21,7 @@
       "database": "burgers_db",
       "host": "127.0.0.1",
       "port": 3306,
+      "use_env_variable": "JAWSDB_URL",
       "dialect": "mysql"
     }
   }
